; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/linsys/extr_linsys_hdsdi.c_Demux.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/linsys/extr_linsys_hdsdi.c_Demux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @Demux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Demux(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @InitCapture(i32* %7)
  %9 = load i64, i64* @VLC_SUCCESS, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %22

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %18, %12
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @Capture(i32* %14)
  %16 = load i64, i64* @VLC_SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  br label %13

19:                                               ; preds = %13
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @CloseCapture(i32* %20)
  store i8* null, i8** %2, align 8
  br label %22

22:                                               ; preds = %19, %11
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i64 @InitCapture(i32*) #1

declare dso_local i64 @Capture(i32*) #1

declare dso_local i32 @CloseCapture(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
